--- a/css/general.css
+++ b/css/general.css
@@ -1,8 +1,8 @@
 .helper {
 	position: fixed;
 	z-index: 99999;
-	bottom: 10%;
-	right: 0;
+	bottom: 5%;
+	left: 0;
 	height: 50px;
 	width: 50px;
 	background-color: #182952;
@@ -11,8 +11,8 @@
 	justify-content: center;
 	align-items: center;
 	transition: 0.3s;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .scam {
@@ -60,19 +60,19 @@
     flex-direction: column;
     align-items: center;
     padding: 10px;
-	bottom: 10%;
-	right: -250px;
+	bottom: 5%;
+	left: -250px;
 	height: 400px;
 	width: 250px;
 	background-color: #182952;
-	border-top-left-radius: 5px;
+	border-top-right-radius: 10px;
 	transition: 0.3s;
 }
 
 .fun-slide {
-	right: 0;
+	left: 0;
 }
 
 .slide {
-	right: 250px;
+	left: 250px;
 }
