--- a/css/general.css
+++ b/css/general.css
@@ -1,8 +1,8 @@
 .helper {
 	position: fixed;
 	z-index: 99999;
-	bottom: 5%;
-	left: 0;
+	top: 7.6%;
+	right: 0;
 	height: 50px;
 	width: 50px;
 	background-color: #182952;
@@ -11,8 +11,8 @@
 	justify-content: center;
 	align-items: center;
 	transition: 0.3s;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 
 .scam {
@@ -38,15 +38,21 @@
 }
 
 .helper-content {
-	padding: 10px;
+	padding-top: 7px;
     display: flex;
+	font-size: 16px;
     width: 100%;
     flex-direction: column;
+}
+
+.helper-content > *:last-child {
+	margin-bottom: 0;
 }
 
 .helper-header {
 	color: #fff;
 	width: 100%;
+	padding-bottom: 5px;
 	text-align: center;
 	font-family: "Poppins", sans-serif;
 	font-weight: 700;
@@ -60,19 +66,18 @@
     flex-direction: column;
     align-items: center;
     padding: 10px;
-	bottom: 5%;
-	left: -250px;
-	height: 400px;
+	top: 7.6%;
+	right: -250px;
 	width: 250px;
 	background-color: #182952;
-	border-top-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 	transition: 0.3s;
 }
 
 .fun-slide {
-	left: 0;
+	right: 0;
 }
 
 .slide {
-	left: 250px;
+	right: 250px;
 }
