--- a/css/general.css
+++ b/css/general.css
@@ -20,17 +20,31 @@
 	font-size: 1.8em;
 }
 
-.custom-file-upload, #upload, .start, .helper-delete-all {
+.custom-file-upload, #upload, .start, .helper-delete-all, .select {
     border: none;
 	color: #fff;
 	font-family: "Poppins", sans-serif;
     display: inline-block;
 	background-color: transparent;
-    padding: 0;
+    padding: 0 5px;
 	font-weight: 700;
     cursor: pointer;
 	margin-bottom: 0.5em;
 	text-align: start;
+	transition: 0.2s;
+	border-radius: 4px;
+	border: 1px solid white;
+}
+
+.custom-file-upload:hover, #upload:hover, .start:hover, .helper-delete-all:hover {
+	background-color: rgba(255, 255, 255, 0.4);
+}
+
+.select {
+	padding: 5px;
+	background-color: white;
+	color: black;
+	text-transform: capitalize;
 }
 
 .helper-content input[type="file"] {
